# ftq-android

./: README.md  build.gradle.kts  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/java/com/github/kr328/clash/: ActivationCodeInputActivity.kt  BaseActivity.kt  MainActivity.kt  (+7 more)
app/src/main/res/values/: themes.xml
common/: build.gradle.kts
core/: build.gradle.kts
core/src/main/cpp/: CMakeLists.txt  libclash.h
design/: build.gradle.kts
design/src/main/res/drawable/: divider_cell_group.xml  divider_height_15.xml
design/src/main/res/layout/: adapter_subscription.xml  common_recycler_list_no_padding.xml  component_cell.xml  component_cell_group.xml  component_faq.xml  component_large_action_label.xml  design_activation_code_input.xml  design_main.xml  design_order_confirm.xml  design_subscriptions.xml  design_wait_payment.xml  dialog_payment_platform.xml  dialog_platform_menu.xml
design/src/main/res/values/: attrs.xml  dimens.xml  strings.xml
design/src/main/res/values-ru/: strings.xml
design/src/main/res/values-zh/: strings.xml
service/src/main/: AndroidManifest.xml
service/src/main/res/drawable/: ic_logo_service.xml
service/src/main/res/values/: colors.xml  ids.xml  strings.xml
service/src/main/res/values-ja-rJP/: strings.xml
service/src/main/res/values-ko-rKR/: strings.xml
service/src/main/res/values-ru/: strings.xml
service/src/main/res/values-zh/: strings.xml
service/src/main/res/values-zh-rHK/: strings.xml
service/src/main/res/values-zh-rTW/: strings.xml
(+71 files in other folders)
